# adaptive-action-chunking

./: .gitignore  README.md  pyproject.toml
configs/: selector_libero.yaml
docs/: design.md  experiments.md
scripts/: bench_latency.py  collect_features.py  generate_oracle_labels.py  run_eval.py  run_eval_v2.py  train_selector.py
src/eval/: libero_eval.py
src/policy/: pi0fast_wrapper.py
src/selector/: dataset.py  model.py
